# GameOfLife

./: CMakeLists.txt  README.md
include/: cell.h  game.h  game_field.h
src/: cell.cpp  game.cpp  game_field.cpp  main.cpp
